--- a/config.yml
+++ b/config.yml
@@ -2,15 +2,15 @@ time:
   start: "2012-03-01T00:00:00"
   end: "2012-04-01T00:00:00"
 space:
-  bbox: None
+  bbox: null
   polygon_str: '130 -10,240 -10,240 10,130 10,130 -10'
-  polygon_file: None
+  polygon_file: null
   polygon_crs: "EPSG:4326"
 export:
   format: csv
   path: "./query_output.csv"
   strict_cf: False
 backend:
-  url: None
-  table: None
-  srid: None
+  url: null
+  table: null
+  srid: 4326
