--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ time:
   start: "2012-03-01T00:00:00"
   end: "2012-04-01T00:00:00"
 space:
+collumns: null
   bbox: null
   polygon_str: '130 -10,240 -10,240 10,130 10,130 -10'
   polygon_file: null
